daemon: Set infinite timeout for enumerate response

Set an infinite timeout for responses to enumerate() otherwise it can
timeout when enumerating large, slow directories.

https://bugzilla.gnome.org/show_bug.cgi?id=598092